# check_xmpp_dns

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  check-xmpp-dns.conf  check_xmpp_dns.conf  check_xmpp_dns.py  check_xmpp_dns.service  index.py  pyproject.toml  requirements.txt  setup.cfg  tmpfiles.d_gunicorn.conf
.github/workflows/: ci.yml  docker-image.yml  python-app.yml
templates/: index_base.html.jinja  index_with_lookup_error.html.jinja  index_with_successful_lookup.html.jinja
