[project]
name = "check-xmpp-dns"
description = "Python cgi script that prints the DNS SRV records used for XMPP."
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
anyio = "^4.7.0"
dnspython = "^2.7.0"
jinja2 = "^3.1.5"
python = "^3.9.0"
starlette = "^0.45.0"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
ruff = "^0.8.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-butbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "COM818",  # flake8-commas trailing-comma-on-bare-tuple
    "COM819",  # flake8-commas prohibited-trailing-comma
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # Sort imports
    "S",  # flake8-bandit
    "W",  # pycodestyle
]
