[project]
name = "check-xmpp-dns"
description = "Python cgi script that prints the DNS SRV records used for XMPP."
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
anyio = "^4.7.0"
dnspython = "^2.7.0"
jinja2 = "^3.1.5"
python = "^3.9.0"
starlette = "^0.45.0"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
ruff = "^0.8.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM818",
    "COM819",
    "C4",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC002",
    "ISC003",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    "ARG",
    "PTH",
    "PLC",
    "PLE",
    "PERF",
    "FURB",
    "RUF",
]
